gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail4923.d
version https://git-lfs.github.com/spec/v1
oid sha256:1f7a080dd0796fc6d838b6f49cba2198d520fc7d7029b0fe9098242016449344
size 535
